adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae, rem pariatur. Officia excepturi voluptatibus, cum suscipit aspernatur asperiores perspiciatis reiciendis ullam reprehenderit rem debitis architecto. Nam ipsa similique accusantium maiores.</p>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit fuga dolor velit doloribus ducimus similique numquam, reiciendis, adipisci pariatur in, excepturi nemo dolorem vero delectus eaque. Dignissimos consequuntur architecto est.
 </body>
 </html>
